# OFDM-PHY-Layer-Simulator

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
include/: channel.hpp  ofdm.hpp  qpsk.hpp
scripts/: plot_ber.py
src/: main.cpp
